# toaster

./: .gitattributes  .gitignore  .gitlab-ci.yml  .mergify.yml  .travis.yml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CNAME  Jenkinsfile  LICENSE  MANIFEST.in  README.md  VERSION  actions.sh  alias.sh  aliases.sh  bastion.sh  build-package.sh  build.sh  builder.sh  buildspec.yml  charts.sh  circle.yml  conn.sh  draft.sh  helper.sh  index.html  install  install-java.sh  install-jdk.sh  install-nginx.sh  install-node.sh  install-rabbitmq.sh  install-tomcat.sh  install-v2.sh  install-v3.sh  install.sh  jdk-install.sh  jdkinst.sh  (+18 more)
.circleci/: config.yml
.github/: CODEOWNERS
charts/: docker-registry.yaml
docs/: ads.txt  error.html  index.html
draft/: Jenkinsfile
extra/: analyzer.sh  composer.sh  swagger.sh
helper/: .gitignore  alias.sh  bastion.sh  cdw.sh  code.sh  ctx.sh  delete.sh  env.sh  nsh.sh  slack.sh  ssh.sh  stress.sh  vscode.sh
install/: apr.sh  elasticsearch.sh  filebeat.sh  httpd.sh  java.sh  java8.sh  java9.sh  kibana.sh  logstash.sh  mariadb.sh  maven.sh  maven3.sh  nginx.sh  node.sh  php5.5.xx_install.sh  php5.sh  php7.sh  php7.xx_install.sh  rabbitmq.sh  tomcat.sh  tomcat8.sh
openshift/: .openshift  README.md  hosts  install-6.sh  install-bastion.sh  install-master.sh  install-node.sh  install-openshift.sh  install.sh  install2.sh  install_amazon.sh  inventory  inventory2
package/: bash_profile.txt  bashrc.txt  hosts.txt  toast-sh.txt  toast.txt
pkgs/: argo.sh  aws-iam-authenticator.sh  awscli.sh  base.sh  draft.sh  guard.sh  helm.sh  java.sh  (+5 more)
(+197 files in other folders)
