[metadata]
name = toast-cli
description = A Python-based CLI utility with a plugin architecture for AWS, Kubernetes, Git, and more
author = nalbam
author_email = byforce@gmail.com
license = GNU General Public License v3.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Utilities

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.6
install_requires =
    click

[options.entry_points]
console_scripts =
    toast = toast:main
